# robotframework-superset

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  COMPONENTS.md  EXTENDING.md  RELEASING.md  TIMESTAMPS.md
examples/jsonl_sink_plugin/: README.md  pyproject.toml  rfs_jsonl_sink.py
infra/: __init__.py  docker-compose.yml
infra/scripts/: __init__.py  diagnose_superset_db.py  sanitize_superset_db.py
infra/superset/: .dockerignore  Dockerfile  Dockerfile.gitlane  __init__.py  bootstrap_dashboards.py  superset_config.py
infra/superset/plugins/: README.md
infra/superset/plugins/plugin-chart-git-lane/: .gitignore  package.json  tsconfig.json
infra/superset/plugins/plugin-chart-git-lane/src/: GitLane.tsx  GitLaneChartPlugin.ts  index.ts  layout.ts  types.ts
infra/superset/plugins/plugin-chart-git-lane/src/plugin/: buildQuery.ts  controlPanel.tsx  transformProps.ts
robot/: __init__.robot  connection.robot  dashboards.robot
src/robotframework_superset/: __init__.py  event.py  keywords.py  registry.py  sink.py
src/robotframework_superset/feeds/: __init__.py  base.py  ollama_feed.py  openai_feed.py
src/robotframework_superset/listeners/: __init__.py  base.py  console.py  robot_listener.py
src/robotframework_superset/sinks/: __init__.py  db.py  gelf.py  multi.py  null.py
tests/: test_console_listener.py  test_database_sink.py  test_db_sink.py  test_event.py  test_examples.py  test_feeds.py  test_gelf_sink.py  test_infra.py  test_infra_scripts.py  test_keywords.py  test_listener.py  test_plugin_args.py  test_postgres_integration.py  test_registry.py  test_robot_listener.py  test_sinks.py
